src/snapshots/solfaml_parser__parser__tests__multi_staff_parsing.snap
---
source: src/parser.rs
expression: result
---
Ok(
    Solfa {
        header: {},
        staffs: [
            Staff {
                dynamics: [],
                measures: [
                    [
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: R,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                    ],
                    [
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: M,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: F,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: M,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: F,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: M,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: F,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: M,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: F,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                    ],
                ],
                lyrics: [
                    IndexedLyricsSet {
                        index: 3,
                        lyrics: [
                            LyricsTree {
                                prefix: ">",
                                root: Join(
                                    Chunk(
                                        Space(
                                            String(
                                                "do",
                                            ),
                                            String(
                                                "re",
                                            ),
                                        ),
                                    ),
                                    Chunk(
                                        Space(
                                            String(
                                                "mi",
                                            ),
                                            String(
                                                "fa",
                                            ),
                                        ),
                                    ),
                                ),
                            },
                        ],
                    },
                ],
            },
            Staff {
                dynamics: [],
                measures: [
                    [
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: S,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: L,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: S,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: L,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: S,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: L,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: S,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: L,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                    ],
                    [
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Up(
                                            1,
                                        ),
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: Note(
                                    Note {
                                        base: D,
                                        variant: Base,
                                        octave: Up(
                                            1,
                                        ),
                                    },
                                ),
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: EmptyNote,
                                kind: Normal,
                            },
                        ),
                        BeatDivision(
                            BeatDivision {
                                lhs: Note(
                                    Note {
                                        base: T,
                                        variant: Base,
                                        octave: Base,
                                    },
                                ),
                                rhs: EmptyNote,
                                kind: Normal,
                            },
                        ),
                    ],
                ],
                lyrics: [
                    IndexedLyricsSet {
                        index: 1,
                        lyrics: [
                            LyricsTree {
                                prefix: ">",
                                root: Join(
                                    Chunk(
                                        Space(
                                            String(
                                                "so",
                                            ),
                                            String(
                                                "la",
                                            ),
                                        ),
                                    ),
                                    Chunk(
                                        Space(
                                            String(
                                                "ti",
                                            ),
                                            String(
                                                "do",
                                            ),
                                        ),
                                    ),
                                ),
                            },
                        ],
                    },
                    IndexedLyricsSet {
                        index: 3,
                        lyrics: [
                            LyricsTree {
                                prefix: ">",
                                root: Join(
                                    Chunk(
                                        Space(
                                            String(
                                                "so",
                                            ),
                                            String(
                                                "la",
                                            ),
                                        ),
                                    ),
                                    Chunk(
                                        String(
                                            "ti",
                                        ),
                                    ),
                                ),
                            },
                        ],
                    },
                ],
            },
        ],
    },
)
